fix aspect ratio on safari part 2

--- a/src/css/drive.css
+++ b/src/css/drive.css
@@ -44,7 +44,8 @@ body {
 }
 
 .file-box {
-  width: 100%;
+  padding-bottom: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
   border: thin solid lightgray;
